Managed weather parsing and added date utils to get desired date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TryStromful</string>
+
+
+    <!--    Date-->
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
 </resources>
