Added PreferenceFragment to Stromful

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,23 @@
     <string name="format_temperature_fahrenheit">
         <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
     </string>
+
+    <!--  Menus -->
     <string name="action_share">Share</string>
     <string name="action_map">Map Location</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- Settings Preferences -->
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="pref_units_key" translatable="false">units</string>
+    <string name="pref_units_metric" translatable="false">metric</string>
+    <string name="pref_units_imperial" translatable="false">imperial</string>
+    <string name="pref_units_label_metric">Metric</string>
+    <string name="pref_units_label_imperial">Imperial</string>
+    <string name="pref_location_default" translatable="false">Kathmandu, Nepal</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+
+
+
 </resources>
