Adding background data sync to Stormful

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">TryStromful</string>
 
 
+    <string name="content_authority">com.example.trystromful</string>
+
     <string name="error_message">An error occurred! Please try again.</string>
     <string name="action_refresh">Refresh</string>
 
