--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,21 @@
        Low:<xliff:g id="low">%3$s</xliff:g>
     </string>
 
+    <!--    Accessibility-->
+    <string name="ally_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="ally_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="ally_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
+    <string name="ally_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
+    <string name="ally_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
+    <string name="ally_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
+    <string name="ally_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
+
+
+
+
+    <string name="humidity_label">Humidity</string>
+    <string name="wind_label">Wind</string>
+    <string name="pressure_label">Pressure</string>
+
 
 </resources>
